force-app/main/default/objects/vlocity_ps__PicklistValue__c/fields/vlocity_ps__BooleanValue__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__BooleanValue__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Boolean Value</label>
    <type>Checkbox</type>
</CustomField>