force-app/main/default/objects/vlocity_ps__PicklistValue__c/fields/vlocity_ps__DateValue__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__DateValue__c</fullName>
    <label>Date Value</label>
    <type>Date</type>
</CustomField>