force-app/main/default/objects/vlocity_ps__PicklistValue__c/fields/vlocity_ps__Value__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__Value__c</fullName>
    <formula>IF(  ISPICKVAL(vlocity_ps__PicklistId__r.vlocity_ps__DataType__c, &apos;Date Time&apos;) ,  TEXT(vlocity_ps__DateTimeValue__c) ,
    IF( ISPICKVAL(vlocity_ps__PicklistId__r.vlocity_ps__DataType__c, &apos;Date&apos;) ,  TEXT(vlocity_ps__DateValue__c) ,
        IF( ISPICKVAL(vlocity_ps__PicklistId__r.vlocity_ps__DataType__c, &apos;Text&apos;),  vlocity_ps__TextValue__c ,
            IF( ISPICKVAL(vlocity_ps__PicklistId__r.vlocity_ps__DataType__c, &apos;Number&apos;) ,  (TEXT(vlocity_ps__NumberValue__c) &amp; vlocity_ps__UnitOfMeasureName__c) ,
                IF( ISPICKVAL(vlocity_ps__PicklistId__r.vlocity_ps__DataType__c, &apos;Boolean&apos;)  ,  IF( vlocity_ps__BooleanValue__c = true  ,  &apos;true&apos; , &apos;false&apos; ), null )))))</formula>
    <label>Value</label>
    <type>Text</type>
</CustomField>